Removed T&C banner, removed condition on Study Overview, fixed styles on T&C button

--- a/force-app/main/default/aura/StudyDetailAboutStudy/StudyDetailAboutStudy.cmp
+++ b/force-app/main/default/aura/StudyDetailAboutStudy/StudyDetailAboutStudy.cmp
@@ -17,13 +17,13 @@
 
     <!-- component body: -->
     <!-- TC alert: -->
-    <aura:if isTrue="{!and(and(v.studyDetail.trial.Terms_And_Conditions_ID__c, !v.studyDetail.isTCAccepted), (v.userMode != 'Participant'))}">
-        <div class="rr-alert brand" style="margin: 30px 0">
-            {!$Label.c.PG_SDAS_L1_TC_Required}
-            <c:RRLink label="{!$Label.c.PG_Login_H_Terms_And_Conditions}" class="tc-link" page="{!'trial-terms-and-conditions?id=' + v.studyDetail.trial.Id}"/>
-            {!if(v.userMode == 'PI', $Label.c.PG_SDAS_L2P_TC_required, $Label.c.PG_SDAS_L2_TC_required)}
-        </div>
-    </aura:if>
+<!--    <aura:if isTrue="{!and(and(v.studyDetail.trial.Terms_And_Conditions_ID__c, !v.studyDetail.isTCAccepted), (v.userMode != 'Participant'))}">-->
+<!--        <div class="rr-alert brand" style="margin: 30px 0">-->
+<!--            {!$Label.c.PG_SDAS_L1_TC_Required}-->
+<!--            <c:RRLink label="{!$Label.c.PG_Login_H_Terms_And_Conditions}" class="tc-link" page="{!'trial-terms-and-conditions?id=' + v.studyDetail.trial.Id}"/>-->
+<!--            {!if(v.userMode == 'PI', $Label.c.PG_SDAS_L2P_TC_required, $Label.c.PG_SDAS_L2_TC_required)}-->
+<!--        </div>-->
+<!--    </aura:if>-->
 
     <div class="sdas-main-container">
         <div class="sdas-about">
@@ -38,10 +38,8 @@
                     <div class="sdas-text">{!v.studyDetail.trial.Brief_Summary__c}</div>
 
                     <!-- study overview: -->
-                    <aura:if isTrue="{!!empty(v.studyDetail.trial.Override_Description__c)}">
-                        <div class="sdas-sub-category">{!$Label.c.PG_SW_H_Study_Overview}</div>
-                        <div class="sdas-text">{!v.studyDetail.trial.Override_Description__c}</div>
-                    </aura:if>
+                    <div class="sdas-sub-category">{!$Label.c.PG_SW_H_Study_Overview}</div>
+                    <div class="sdas-text">{!v.studyDetail.trial.Override_Description__c}</div>
 
                     <!-- inclusion exclusion: -->
                     <div class="sdas-sub-category">{!$Label.c.PG_SW_Link_Inclusion_Exclusion_Criteria}</div>
@@ -164,10 +162,10 @@
                     <div class="slds-grid slds-wrap socialnetworks-section">
                         <!-- terms and conditions action -->
                         <div class="slds-col slds-size_1-of-2">
-                            <aura:if isTrue="{!and(v.studyDetail.trial.Terms_And_Conditions_ID__c, v.studyDetail.isTCAccepted)}">
+                            <aura:if isTrue="{!v.studyDetail.trial.Terms_And_Conditions_ID__c}">
                                 <div class="slds-grid slvi-section">
                                     <div class="slds-col btn-wrapper">
-                                        <div id="{!v.studyDetail.ACT_VIEW_TC}" class="slvi-btn" onclick="{!c.doAction}">
+                                        <div id="viewTermsAndConditions" class="slvi-btn" onclick="{!c.doAction}">
                                             <div class="btn-content">
                                                 <c:RRIcon iconName="paper-many"/>
                                                 {!$Label.c.BTN_View_terms_and_conditions}
@@ -255,6 +253,8 @@
             </div>
         </div>
     </div>
+
+    <c:ShareModal aura:id="emailModal" needRefresh="false" emailType="SOCIAL_SHARING" parent="{!v.parent}"/>
 
     <!-- bottom bar: -->
     <!--<aura:if isTrue="{!!empty(v.studyDetail.studyBottomBarActions)}">
