--- a/force-app/main/default/aura/StudyDetailAboutStudy/StudyDetailAboutStudy.css
+++ b/force-app/main/default/aura/StudyDetailAboutStudy/StudyDetailAboutStudy.css
@@ -322,13 +322,13 @@
     color: #297DFD;
     padding-top: 10px;
     padding-bottom: 10px;
-    border-collapse: collapse;
+    /*border-collapse: collapse;*/
     flex-basis: 0;
 }
 
 
 .THIS .slvi-btn + .slvi-btn {
-    border-left: 1px solid #F2F2F2;
+    /*border-left: 1px solid #F2F2F2;*/
 }
 
 
@@ -355,7 +355,7 @@
 }
 
 .THIS .slvi-btn .btn-content:active {
-    top: 1px;
+    /*top: 1px;*/
 }
 
 
@@ -366,15 +366,15 @@
 
 .THIS .slvi-btn:active {
     /*box-shadow: inset 0 0 7px rgba(0,0,0,0.25);*/
-    box-shadow: inset 1px 4px 9px -6px rgba(0, 0, 0, 0.35);
+    /*box-shadow: inset 1px 4px 9px -6px rgba(0, 0, 0, 0.35);*/
 }
 
 .THIS .slvi-btn:first-child {
-    border-bottom-left-radius: 5px;
+    /*border-bottom-left-radius: 5px;*/
 }
 
 .THIS .slvi-btn:last-child {
-    border-bottom-right-radius: 5px;
+    /*border-bottom-right-radius: 5px;*/
 }
 
 .THIS .btn-wrapper {
