--- a/force-app/main/default/layouts/Trial_Survey__c-Trial Survey Layout Days.layout-meta.xml
+++ b/force-app/main/default/layouts/Trial_Survey__c-Trial Survey Layout Days.layout-meta.xml
@@ -16,12 +16,16 @@
                 <field>Survey__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Required</behavior>
                 <field>Active_After_Days__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>Expires_After_Days__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Is_Midpoint__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
@@ -89,7 +93,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h0E000001Hb0a</masterLabel>
+        <masterLabel>00h4E000000obFS</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
