--- a/force-app/main/default/layouts/Visit_Result_Type_Sharing__c-Visit Result Type Sharing Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Visit_Result_Type_Sharing__c-Visit Result Type Sharing Layout.layout-meta.xml
@@ -14,6 +14,10 @@
                 <behavior>Edit</behavior>
                 <field>Clinical_Trial_Profile__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Include_Countries__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
