--- a/force-app/main/default/aura/VisitResultSharingItem/VisitResultSharingItem.cmp
+++ b/force-app/main/default/aura/VisitResultSharingItem/VisitResultSharingItem.cmp
@@ -13,7 +13,7 @@
     <div class="{!'slds-grid vr-row ' + if(v.visitResult.type == 'Disabled', 'disabled', '')}">
         <div class="slds-col slds-size_3-of-12 row-label">{!v.visitResult.label}</div>
         <div class="slds-col slds-size_9-of-12 type-cell">
-            <aura:if isTrue="{!v.visitResult.type != 'Countries'}">
+            <aura:if isTrue="{!or(v.visitResult.type == 'Disabled', v.visitResult.type == 'All')}">
                 <lightning:select name="Visit type" label="Hidden"  variant="label-hidden" class="type-picklist"
                                   value="{!v.visitResult.type}" onchange="{!c.doTypeChanged}">
                     <aura:iteration items="{!v.typeSelectLVList}" var="option">
@@ -21,11 +21,12 @@
                     </aura:iteration>
                 </lightning:select>
             </aura:if>
-            <aura:if isTrue="{!v.visitResult.type == 'Countries'}">
+            <aura:if isTrue="{!or(v.visitResult.type == 'Countries', v.visitResult.type == 'Countries_Disabled')}">
                 <c:VisitResultSharingCountryLookup aura:id="countryLookup" value="{!v.visitResult.countryCodes}" isMultiEntry="true"
                                                    onchange="{!c.doCountryChanged}" onblur="{!c.doCountryChanged}"
                                                    placeholder="Select country" placeholderSelected="Select another country"
-                                                   ctpId="{!v.ctpId}" includeStates="false"/>
+                                                   ctpId="{!v.ctpId}" includeStates="false"
+                                                   isInclude="{!v.visitResult.type == 'Countries'}"/>
             </aura:if>
         </div>
     </div>
