Added new field, updated script, updated triggers

--- a/force-app/main/default/layouts/Integration_Patient__c-Integration Patient Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Integration_Patient__c-Integration Patient Layout.layout-meta.xml
@@ -38,6 +38,10 @@
                 <behavior>Edit</behavior>
                 <field>Subject_Date__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Work_Status__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
