--- a/force-app/main/default/layouts/Integration_Visit__c-Integration Visits Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Integration_Visit__c-Integration Visits Layout.layout-meta.xml
@@ -42,6 +42,10 @@
                 <behavior>Edit</behavior>
                 <field>IsDeletedInSDH__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Work_Status__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
