Fixed icons bug.

--- a/force-app/main/default/aura/VisitPlanConfiguration/VisitPlanConfiguration.cmp
+++ b/force-app/main/default/aura/VisitPlanConfiguration/VisitPlanConfiguration.cmp
@@ -35,8 +35,10 @@
     <aura:attribute name="IconsPackPath" type="String" default='/icons.svg'/>
     <aura:attribute name="CTPrecord" type="Object" default='Object'/>
     <aura:attribute name="recordLoadError" type="Object" default='Object'/>
-    <aura:attribute name="fields" type="String[]" default="['Name']" />
-    <aura:attribute name="iconsURL" type="String" default="{!$Resource.rr_community_icons + v.IconsPackPath}" access="private"/><aura:attribute name="summaryContainers" type="List" access="private"/>
+    <aura:attribute name="fields" type="String[]" default="['Name']"/>
+    <aura:attribute name="iconsURL" type="String" default="{!$Resource.rr_community_icons + v.IconsPackPath}"
+                    access="private"/>
+    <aura:attribute name="summaryContainers" type="List" access="private"/>
     <force:recordData aura:id="CTPLoader"
                       recordId="{!v.recordId}"
                       fields="Name,Visit_Plan__c"
@@ -56,10 +58,11 @@
                 <lightning:layoutItem>
                     <aura:if isTrue="{!v.visitPlanId!=null}">
                         <lightning:button onclick="{!c.addVisit}" class="slds-theme_neutral" variant="neutral"
-                                          label="add visit"/>
+                                          label="Add Visit"/>
                         <aura:set attribute="else">
-                            <lightning:button onclick="{!c.createVisitplan}" class="slds-theme_neutral" variant="neutral"
-                                              label="create VisitPlan"/>
+                            <lightning:button onclick="{!c.createVisitplan}" class="slds-theme_neutral"
+                                              variant="neutral"
+                                              label="Create Visit Plan"/>
                         </aura:set>
                     </aura:if>
                 </lightning:layoutItem>
@@ -106,7 +109,6 @@
         <div class="slds-p-horizontal--small">
             <lightning:recordEditForm
                     onload="{!c.preload}"
-                    onsubmit="{!c.handleSubmit}"
                     onsuccess="{!c.handleSuccess}"
                     aura:id="editForm"
                     recordId="{!v.visitId}"
@@ -114,7 +116,7 @@
                 <!-- the messages component is for error messages -->
                 <lightning:messages/>
 
-                <lightning:inputField  aura:id="nameId" fieldName="Name"/>
+                <lightning:inputField aura:id="nameId" fieldName="Name"/>
                 <lightning:inputField aura:id="Order__c" fieldName="Order__c"/>
                 <lightning:inputField aura:id="Visit_Schedule__c" fieldName="Visit_Schedule__c"/>
                 <lightning:inputField aura:id="Visit_Number__c" fieldName="Visit_Number__c"/>
@@ -172,7 +174,9 @@
                               onclick="{!c.submitForm}"/>
         </aura:set>
     </c:CustomModal>
-    <c:CustomModal aura:Id='createVisitPlan' size="medium" >
+    <lightning:notificationsLibrary aura:id="notifLib"/>
+
+    <c:CustomModal aura:Id='createVisitPlan' size="medium">
         <lightning:recordForm
                 recordId="{!v.visitPlanId}"
                 objectApiName="Visit_Plan__c"
