--- a/force-app/main/default/aura/VisitPlanConfiguration/VisitPlanConfiguration.css
+++ b/force-app/main/default/aura/VisitPlanConfiguration/VisitPlanConfiguration.css
@@ -37,3 +37,7 @@
     height: 47px!important;
     width: 30px!important;
 }
+
+.THIS .slds-visual-picker+.slds-visual-picker {
+    margin-left: 0;
+}
