--- a/force-app/main/default/aura/IconPlanetVisitInfoEdit/IconPlanetVisitInfoEdit.cmp
+++ b/force-app/main/default/aura/IconPlanetVisitInfoEdit/IconPlanetVisitInfoEdit.cmp
@@ -71,14 +71,14 @@
         <aura:if isTrue="{!empty(v.detailIcons)==false}">
             <c:RRTable>
                 <tr>
-                    <th>Icon</th>
-                    <th class="priority">Icon Label</th>
-                    <th class="completed-by">Description</th>
+                    <th class="slds-text-align_center">Icon</th>
+                    <th class="priority slds-text-align_center">Icon Label</th>
+                    <th class="completed-by slds-text-align_center">Description</th>
                 </tr>
                 <aura:iteration items="{!v.detailIcons}" var="icon">
                     <tr>
                         <td>
-                            <div class="icon-title">
+                            <div class="icon-title slds-m-top--medium">
                                 <c:RRIcon iconName="{!icon.Name}"/>
                             </div>
                         </td>
@@ -116,7 +116,7 @@
         </aura:if>
 
         <aura:set attribute="footer">
-            <lightning:button variant="neutral" type="button" name="close" label="close"
+            <lightning:button variant="neutral" type="button" name="cancel" label="Cancel"
                               onclick="{!c.closeModal}"/>
             <aura:if isTrue="{!empty(v.detailIcons)==false}">
                 <lightning:button variant="brand" type="button" name="save" label="Save"
