--- a/force-app/main/default/aura/VisitItem/VisitItem.cmp
+++ b/force-app/main/default/aura/VisitItem/VisitItem.cmp
@@ -8,7 +8,7 @@
     <aura:registerEvent name="onDeleteRecord" type="c:sendRecord"/>
     <tr class="slds-hint-parent">
         <td>
-            <a href="javascript:void(0);" class=" slds-text-link">{!v.visit.Name}</a>
+            <a href="javascript:void(0);" onclick="{!c.navToRecord}" class=" slds-text-link">{!v.visit.Name}</a>
         </td>
         <td>
             <div class="slds-text-title slds-text-color_default">{!v.visit.Visit_Number__c}</div>
