--- a/force-app/main/default/aura/StudyDetailAboutStudy/StudyDetailAboutStudy.cmp
+++ b/force-app/main/default/aura/StudyDetailAboutStudy/StudyDetailAboutStudy.cmp
@@ -17,13 +17,13 @@
 
     <!-- component body: -->
     <!-- TC alert: -->
-    <aura:if isTrue="{!and(and(v.studyDetail.trial.Terms_And_Conditions_ID__c, !v.studyDetail.isTCAccepted), (v.userMode != 'Participant'))}">
-        <div class="rr-alert brand" style="margin: 30px 0">
-            {!$Label.c.PG_SDAS_L1_TC_Required}
-            <c:RRLink label="{!$Label.c.PG_Login_H_Terms_And_Conditions}" class="tc-link" page="{!'trial-terms-and-conditions?id=' + v.studyDetail.trial.Id}"/>
-            {!if(v.userMode == 'PI', $Label.c.PG_SDAS_L2P_TC_required, $Label.c.PG_SDAS_L2_TC_required)}
-        </div>
-    </aura:if>
+<!--    <aura:if isTrue="{!and(and(v.studyDetail.trial.Terms_And_Conditions_ID__c, !v.studyDetail.isTCAccepted), (v.userMode != 'Participant'))}">-->
+<!--        <div class="rr-alert brand" style="margin: 30px 0">-->
+<!--            {!$Label.c.PG_SDAS_L1_TC_Required}-->
+<!--            <c:RRLink label="{!$Label.c.PG_Login_H_Terms_And_Conditions}" class="tc-link" page="{!'trial-terms-and-conditions?id=' + v.studyDetail.trial.Id}"/>-->
+<!--            {!if(v.userMode == 'PI', $Label.c.PG_SDAS_L2P_TC_required, $Label.c.PG_SDAS_L2_TC_required)}-->
+<!--        </div>-->
+<!--    </aura:if>-->
 
     <div class="sdas-main-container">
         <div class="sdas-about">
@@ -162,7 +162,7 @@
                         <div class="slds-grid slds-wrap socialnetworks-section">
                             <!-- terms and conditions action -->
                             <div class="slds-col slds-size_1-of-2">
-                                <aura:if isTrue="{!and(v.studyDetail.trial.Terms_And_Conditions_ID__c, v.studyDetail.isTCAccepted)}">
+                                <aura:if isTrue="{!v.studyDetail.trial.Terms_And_Conditions_ID__c}">
                                     <div class="slds-grid slvi-section">
                                         <div class="slds-col btn-wrapper">
                                             <div id="viewTermsAndConditions" class="slvi-btn" onclick="{!c.doAction}">
@@ -266,5 +266,5 @@
             </aura:iteration>
         </c:RRBottomBar>
     </aura:if> -->
-
+    <c:ShareModal aura:id="emailModal" needRefresh="false" emailType="SOCIAL_SHARING" parent="{!v.parent}"/>
 </aura:component>
