--- a/force-app/main/default/aura/StudyDetailAboutStudy/StudyDetailAboutStudy.cmp
+++ b/force-app/main/default/aura/StudyDetailAboutStudy/StudyDetailAboutStudy.cmp
@@ -12,15 +12,19 @@
     <!-- actions: -->
 
     <c:Action_SendSiteRequestByHCP aura:id="sendSiteRequestAction"/>
-    <c:OpenToReceiveReferralsModal aura:id="openToReceiveReferralsModal" trialId="{!v.studyDetail.trial.Id}" parent="{!v.parent}"/>
-    <c:NoTanksModal aura:id="noTanksModal" trialId="{!v.studyDetail.trial.Id}" parent="{!v.parent}" userMode="{!v.userMode}"/>
+    <c:OpenToReceiveReferralsModal aura:id="openToReceiveReferralsModal" trialId="{!v.studyDetail.trial.Id}"
+                                   parent="{!v.parent}"/>
+    <c:NoTanksModal aura:id="noTanksModal" trialId="{!v.studyDetail.trial.Id}" parent="{!v.parent}"
+                    userMode="{!v.userMode}"/>
 
     <!-- component body: -->
     <!-- TC alert: -->
-    <aura:if isTrue="{!and(and(v.studyDetail.trial.Terms_And_Conditions_ID__c, !v.studyDetail.isTCAccepted), (v.userMode != 'Participant'))}">
+    <aura:if
+            isTrue="{!and(and(v.studyDetail.trial.Terms_And_Conditions_ID__c, !v.studyDetail.isTCAccepted), (v.userMode != 'Participant'))}">
         <div class="rr-alert brand" style="margin: 30px 0">
             {!$Label.c.PG_SDAS_L1_TC_Required}
-            <c:RRLink label="{!$Label.c.PG_Login_H_Terms_And_Conditions}" class="tc-link" page="{!'trial-terms-and-conditions?id=' + v.studyDetail.trial.Id}"/>
+            <c:RRLink label="{!$Label.c.PG_Login_H_Terms_And_Conditions}" class="tc-link"
+                      page="{!'trial-terms-and-conditions?id=' + v.studyDetail.trial.Id}"/>
             {!if(v.userMode == 'PI', $Label.c.PG_SDAS_L2P_TC_required, $Label.c.PG_SDAS_L2_TC_required)}
         </div>
     </aura:if>
@@ -28,10 +32,11 @@
     <div class="sdas-main-container">
         <div class="sdas-about">
             <div class="slds-grid slds-wrap">
-                <div id="info-left" class="slds-col slds-size_1-of-1 slds-medium-size_7-of-12 slds-order_1 slds-medium-order_1">
+                <div id="info-left"
+                     class="slds-col slds-size_1-of-1 slds-medium-size_7-of-12 slds-order_1 slds-medium-order_1">
                     <!-- about title -->
                     <c:RRAnchor aura:id="aboutAnchor" offset="-160"/>
-<!--                    <div class="sdas-category"><c:RRIcon iconName="about-the-study"/>{!$Label.c.PG_SW_Link_About_The_Study}</div>-->
+                    <!--                    <div class="sdas-category"><c:RRIcon iconName="about-the-study"/>{!$Label.c.PG_SW_Link_About_The_Study}</div>-->
 
                     <!-- objectiove section: -->
                     <div class="sdas-sub-category">{!$Label.c.PG_SW_H_Objective}</div>
@@ -44,7 +49,7 @@
                     <!-- inclusion exclusion: -->
                     <div class="sdas-sub-category">{!$Label.c.PG_SW_Link_Inclusion_Exclusion_Criteria}</div>
                     <c:RRAnchor aura:id="inclusionExclusionAnchor" offset="-160"/>
-<!--                    <div class="sdas-category"><c:RRIcon iconName="people"/>{!$Label.c.PG_SW_Link_Inclusion_Exclusion_Criteria}</div>-->
+                    <!--                    <div class="sdas-category"><c:RRIcon iconName="people"/>{!$Label.c.PG_SW_Link_Inclusion_Exclusion_Criteria}</div>-->
                     <div class="sdas-text">
                         <aura:if isTrue="{!v.userMode == 'Participant'}">
                             {!$Label.c.PG_SW_T_1}
@@ -66,15 +71,15 @@
                     <!-- map section: -->
 
                     <!-- for HCP: -->
-                   <!-- <aura:if isTrue="{!v.userMode == 'HCP'}">
-                        <c:RRAnchor aura:id="studySitesAnchor" offset="-160"/>
-                        <div class="sdas-category"><c:RRIcon iconName="map-marker"/>{!$Label.c.PG_VP_L_Study_sites}</div>
-                        <div class="sdas-text">
-                            {!$Label.c.PG_SDAS_L1_please_review}
-                            <br/>
-                            {!$Label.c.PG_SDAS_L2_please_review}
-                        </div>
-                    </aura:if> -->
+                    <!-- <aura:if isTrue="{!v.userMode == 'HCP'}">
+                         <c:RRAnchor aura:id="studySitesAnchor" offset="-160"/>
+                         <div class="sdas-category"><c:RRIcon iconName="map-marker"/>{!$Label.c.PG_VP_L_Study_sites}</div>
+                         <div class="sdas-text">
+                             {!$Label.c.PG_SDAS_L1_please_review}
+                             <br/>
+                             {!$Label.c.PG_SDAS_L2_please_review}
+                         </div>
+                     </aura:if> -->
 
                     <aura:if isTrue="{!v.userMode == 'Participant'}">
                         <c:RRAnchor aura:id="studySiteAnchor" offset="-160"/>
@@ -84,17 +89,17 @@
                     <aura:if isTrue="{!v.userMode == 'PI'}">
                         <div class="sdas-sub-category">{!$Label.c.PG_SRP_L_Referring_Providers}</div>
                         <c:RRAnchor aura:id="referringClinicsAnchor" offset="-160"/>
-<!--                        <div id="anchor-clinics" class="sdas-category"><c:RRIcon iconName="referring-clinic"/>{!$Label.c.PG_DBPI_L_Referring_clinics}</div>-->
+                        <!--                        <div id="anchor-clinics" class="sdas-category"><c:RRIcon iconName="referring-clinic"/>{!$Label.c.PG_DBPI_L_Referring_clinics}</div>-->
                         <aura:if isTrue="{!empty(v.studyDetail.accountEnrollmentsList)}">
                             <c:EmptyListStub iconName="sad"
                                              message="{!$Label.c.PG_SDAS_L_No_items}"/>
                         </aura:if>
 
                         <aura:if isTrue="{!v.studyDetail.isSSAccepted}">
-<!--                            <div class="sdas-text">-->
-<!--                                {!$Label.c.PG_SDAS_L_list_referring_clinics + ' '}-->
-<!--                                <c:RRLink page="my-referring-clinics?" label="{!$Label.c.PG_CP_L_My_Referring_Clinics}"/> {!' ' + $Label.c.PG_SDAS_L2_list_referring_clinics}-->
-<!--                            </div>-->
+                            <!--                            <div class="sdas-text">-->
+                            <!--                                {!$Label.c.PG_SDAS_L_list_referring_clinics + ' '}-->
+                            <!--                                <c:RRLink page="my-referring-clinics?" label="{!$Label.c.PG_CP_L_My_Referring_Clinics}"/> {!' ' + $Label.c.PG_SDAS_L2_list_referring_clinics}-->
+                            <!--                            </div>-->
                             <aura:set attribute="else">
                                 <div class="sdas-text">
                                     {!$Label.c.PG_SDAS_T_steps}
@@ -118,34 +123,14 @@
                                     <aura:iteration items="{!v.studyDetail.accountEnrollmentsList}" var="accountWithEnrollments" indexVar="index">
                                         <div class="sdas-footer-info">
                                             <div class="name">
-                                                <aura:if isTrue="{!v.userMode == 'HCP'}">
-                                                    <div style="float: right"><c:HCPStatusIco status="{!accountWithEnrollments.hcpStatus}" overrideStatusLabel="{!accountWithEnrollments.hcpStatusLabel}"/></div>
-                                                </aura:if>
                                                 {!index + 1}. {!accountWithEnrollments.name}
                                             </div>
                                             <div class="address">
                                                 <div class="address-1">{!accountWithEnrollments.addrStreet}</div>
                                                 <div class="address-3">{!accountWithEnrollments.addrCity}</div>
-                                                <aura:if isTrue="{!and(and(v.userMode == 'HCP', !v.studyDetail.actions.sendSiteRequest.disabled),not(empty(v.studyDetail.hcpe)))}">
-                                                    <div style="margin-top: 10px">
-                                                        <button class="apollo-btn tertiary"
-                                                                id="{!accountWithEnrollments.studySiteId}"
-                                                                onclick="{!c.doChangeStudySite}"
-                                                                disabled="{!v.studyDetail.actions.sendSiteRequest.disabled}">
-                                                            {!v.studyDetail.actions.sendSiteRequest.label}
-                                                        </button>
-                                                    </div>
-                                                </aura:if>
                                             </div>
                                         </div>
                                     </aura:iteration>
-                                    <aura:if isTrue="{!and(and(v.userMode == 'HCP', !v.studyDetail.actions.sendSiteRequest.disabled),not(empty(v.studyDetail.hcpe)))}">
-                                        <div class="study-sites-footer">
-                                            <button class="apollo-btn text" onclick="{!c.doSelectNoSites}">{!$Label.c.BTN_Click_here}</button>
-                                            &nbsp;
-                                            {!$Label.c.PG_SDAS_L_not_acceptable}
-                                        </div>  
-                                    </aura:if>
                                 </div>
                             </aura:if>
                         </div>
@@ -156,13 +141,15 @@
                 <div class="slds-col slds-size_1-of-1 slds-medium-size_1-of-12 slds-order_3 slds-medium-order_2"></div>
 
                 <!-- right info section -->
-                <div id="info-right" class="slds-col slds-size_1-of-1 slds-medium-size_4-of-12 slds-order_2 slds-medium-order_3">
+                <div id="info-right"
+                     class="slds-col slds-size_1-of-1 slds-medium-size_4-of-12 slds-order_2 slds-medium-order_3">
 
                     <aura:if isTrue="{!v.userMode != 'Participant'}">
                         <div class="slds-grid slds-wrap socialnetworks-section">
                             <!-- terms and conditions action -->
                             <div class="slds-col slds-size_1-of-2">
-                                <aura:if isTrue="{!and(v.studyDetail.trial.Terms_And_Conditions_ID__c, v.studyDetail.isTCAccepted)}">
+                                <aura:if
+                                        isTrue="{!and(v.studyDetail.trial.Terms_And_Conditions_ID__c, v.studyDetail.isTCAccepted)}">
                                     <div class="slds-grid slvi-section">
                                         <div class="slds-col btn-wrapper">
                                             <div id="viewTermsAndConditions" class="slvi-btn" onclick="{!c.doAction}">
@@ -218,7 +205,8 @@
 
                         <aura:if isTrue="{!!empty(v.studyDetail.trial.Interventions__c)}">
                             <div class="title">{!$Label.c.PG_SW_F_Investigational_product}</div>
-                            <div class="text" style="white-space: pre-line">{!v.studyDetail.trial.Interventions__c}</div>
+                            <div class="text"
+                                 style="white-space: pre-line">{!v.studyDetail.trial.Interventions__c}</div>
                         </aura:if>
 
                         <div class="title">{!$Label.c.PG_SW_F_Phase}</div>
@@ -242,12 +230,16 @@
 
                         <aura:if isTrue="{!!empty(v.studyDetail.trial.Enrollment_Start_Date__c)}">
                             <div class="title">{!$Label.c.PG_SW_F_Enrollment_Start_Date}</div>
-                            <div class="text"><ui:outputDate value="{!v.studyDetail.trial.Enrollment_Start_Date__c}"/></div>
+                            <div class="text">
+                                <ui:outputDate value="{!v.studyDetail.trial.Enrollment_Start_Date__c}"/>
+                            </div>
                         </aura:if>
 
                         <aura:if isTrue="{!!empty(v.studyDetail.trial.Enrolled_End_Date__c)}">
                             <div class="title">{!$Label.c.PG_SW_F_Enrollment_End_Date}</div>
-                            <div class="text"><ui:outputDate value="{!v.studyDetail.trial.Enrolled_End_Date__c}"/></div>
+                            <div class="text">
+                                <ui:outputDate value="{!v.studyDetail.trial.Enrolled_End_Date__c}"/>
+                            </div>
                         </aura:if>
                     </div>
                 </div>
