--- a/force-app/main/default/layouts/Visit_Result_TypeM__mdt-Visit Result Type Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Visit_Result_TypeM__mdt-Visit Result Type Layout.layout-meta.xml
@@ -34,6 +34,10 @@
                 <behavior>Edit</behavior>
                 <field>Visit_Result_Type__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Description_Label_Api_Name__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
