--- a/force-app/main/default/aura/VisitPlanConfiguration/VisitPlanConfiguration.cmp
+++ b/force-app/main/default/aura/VisitPlanConfiguration/VisitPlanConfiguration.cmp
@@ -33,29 +33,26 @@
                       recordUpdated="{!c.handleRecordUpdated}"
     />
     <lightning:card title="Planned visits" iconName="standard:contact">
+        <aura:set attribute="actions">
+            <lightning:layout horizontalAlign="center" verticalAlign="end">
+                <lightning:layoutItem>
+                    <aura:if isTrue="{!v.visitPlanId!=null}">
+                    </aura:if>
+                </lightning:layoutItem>
+                <lightning:layoutItem>
+                    <aura:if isTrue="{!v.visitPlanId!=null}">
+                        <lightning:button disabled="{!empty(v.error)==false}" onclick="{!c.addVisit}" class="slds-theme_neutral" variant="neutral"
+                                          label="{!$Label.c.Visit_b_Add_Visit}"/>
+                        <aura:set attribute="else">
+                            <lightning:button disabled="{!empty(v.error)}" onclick="{!c.createVisitplan}" class="slds-theme_neutral"
+                                              variant="neutral"
+                                              label="{!$Label.c.Visit_b_Create_Visit_Plan}"/>
+                        </aura:set>
+                    </aura:if>
+                </lightning:layoutItem>
+            </lightning:layout>
+        </aura:set>
         <aura:if isTrue="{!empty(v.error)}">
-            <aura:set attribute="actions">
-                <lightning:layout horizontalAlign="center" verticalAlign="end">
-                    <lightning:layoutItem>
-                        <aura:if isTrue="{!v.visitPlanId!=null}">
-                        </aura:if>
-                    </lightning:layoutItem>
-                    <lightning:layoutItem>
-                        <aura:if isTrue="{!v.visitPlanId!=null}">
-                            <lightning:button onclick="{!c.addVisit}" class="slds-theme_neutral" variant="neutral"
-                                              label="{!$Label.c.Visit_b_Add_Visit}"/>
-                            <aura:set attribute="else">
-                                <lightning:button onclick="{!c.createVisitplan}" class="slds-theme_neutral"
-                                                  variant="neutral"
-                                                  label="{!$Label.c.Visit_b_Create_Visit_Plan}"/>
-                            </aura:set>
-                        </aura:if>
-                    </lightning:layoutItem>
-                </lightning:layout>
-            </aura:set>
-            <aura:set attribute="footer">
-                <c:rrPagination allObjects="{!v.visits}" entriesOnPage="10" currentObjects="{!v.currentVisits}"/>
-            </aura:set>
             <aura:if isTrue="{!empty(v.visits)}">
                 <div class="slds-text-heading_medium slds-text-align_center">
                     {!$Label.c.empty_visits}
@@ -92,6 +89,9 @@
                 </div>
             </aura:set>
         </aura:if>
+        <aura:set attribute="footer">
+            <c:rrPagination allObjects="{!v.visits}" entriesOnPage="10" currentObjects="{!v.currentVisits}"/>
+        </aura:set>
     </lightning:card>
     <c:CustomModal aura:Id='customModal' size="medium">
         <div class="slds-p-horizontal--small">
@@ -105,7 +105,6 @@
                 <lightning:messages/>
 
                 <lightning:inputField aura:id="nameId" fieldName="Name"/>
-                <lightning:inputField aura:id="Order__c" fieldName="Order__c"/>
                 <lightning:inputField aura:id="Visit_Schedule__c" fieldName="Visit_Schedule__c"/>
                 <lightning:inputField aura:id="Visit_Number__c" fieldName="Visit_Number__c"/>
                 <lightning:inputField class="slds-hide" aura:id='splittedIcons' fieldName="Icons__c"/>
@@ -179,7 +178,7 @@
 
     </c:CustomModal>
     <c:IconsStaticResourceService aura:id="iconsStaticResourceService"
-                                  staticResourceName="IconsForVisitPlanConfiguration"
+                                  staticResourceName="Icons_legend"
                                   IconsPackageFIlePath="/icons.svg"/>
 
   <!--  <c:IconPlanetVisitInfoEdit iconsURL="{!v.iconsURL}" visitPlanId='{!v.visitPlanId}' aura:id="iconEdit"/>-->
