Fixed PI functionality

--- a/force-app/main/default/aura/MyReferredZone/MyReferredZone.cmp
+++ b/force-app/main/default/aura/MyReferredZone/MyReferredZone.cmp
@@ -7,6 +7,7 @@
     <!--===========================================PI================================================================-->
     <aura:attribute name="filterByStudy"                type="Boolean" default="{!false}"/>
     <aura:attribute name="ssId"                         type="String"/>
+    <aura:attribute name="trialId"                      type="String"/>
     <!--=============================================================================================================-->
     <aura:attribute name="isInitialized"                type="Boolean" default="{!false}"   access="private"/>
     <aura:attribute name="child"                        type="Aura.Component"               access="private"/>
@@ -21,6 +22,10 @@
     <aura:attribute name="statusFilterPlaceholder"      type="String"                       access="private"/>
     <aura:attribute name="searchTextPlaceholder"        type="String"                       access="private"/>
     <aura:attribute name="objectLabel"                  type="String"                       access="private"/>
+    <aura:attribute name="studySitePickList"            type="List"/>
+    <aura:attribute name="studyPickList"                type="List"/>
+    <aura:attribute name="filterWasChanged"             type="Boolean" />
+    <aura:attribute name="studyWasChanged"              type="Boolean"/>
     <!--===========================================PAGINATION========================================================-->
     <aura:attribute name="allObjects"                   type="List"                         access="private"/>
     <aura:attribute name="currentObjects"               type="List"                         access="private"/>
@@ -51,6 +56,8 @@
                        itemTitle="{!if(v.userMode == 'PI', $Label.c.PG_MRZ_L_clinics, $Label.c.PG_MRZ_L_study_sites)}" >
 
             <c:rrSelect value="{!v.statusFilter}" options="{!v.statusOptions}" placeholder="{!v.statusFilterPlaceholder}" otherOptionLabel="{!$Label.c.PG_MRZ_L_No_filter}"/>
+            <c:rrSelect value="{!v.trialId}" options="{!v.studyPickList}" placeholder="{!$Label.c.PG_VP_L_Studies}" onchange="{!c.studyStatusChange}"/>
+            <c:rrSelect value="{!v.ssId}" options="{!v.studySitePickList}" placeholder="{!$Label.c.PG_VP_L_Study_sites}" onchange="{!c.statusChange}"/>
         </c:FilterPanel>
 
     </div>
