--- a/force-app/main/default/aura/MyReferringClinics/MyReferringClinics.cmp
+++ b/force-app/main/default/aura/MyReferringClinics/MyReferringClinics.cmp
@@ -18,10 +18,17 @@
     <aura:attribute name="rpData" type="Object" access="private"/>
     <aura:attribute name="studySitesForInvitation" type="List" access="private"/>
     <aura:attribute name="reqFieldsFilled" type="Boolean" default="true"/>
+    <aura:attribute name="trialId" type="String"/>
     <aura:attribute name="ssId" type="String"/>
+    <aura:attribute name="studySitePickList" type="List"/>
+    <aura:attribute name="studyPickList" type="List"/>
+    <aura:attribute name="filterWasChanged" type="Boolean" default="false"/>
+    <aura:attribute name="studyWasChanged" type="Boolean" default="false"/>
     <!--=============================================================================================================-->
     <aura:handler name="change" value="{!v.filterInfo.isActive}" action="{!c.showPendingPhysicans}"/>
     <aura:handler name="change" value="{!v.rpData}" action="{!c.checkReqFields}"/>
+    <aura:handler name="change" value="{!v.filterWasChanged}" action="{!c.filterData}"/>
+    <!--<aura:handler name="change" value="{!v.ssId}" action="{!c.filterData}"/>-->
     <!--=============================================================================================================-->
     <aura:handler event="c:EventCommunityInitialized" action="{!c.doInit}"/>
     <!--=============================================================================================================-->
@@ -97,8 +104,15 @@
             </aura:if>
             <div class="slds-is-relative">
                 <c:RRSpinner aura:id="recordListSpinner" size="medium" showSpinner="false"/>
-                <c:MyReferredZone workspaceWrapper="{!v.filteredReferringClinics}" userMode="{!v.userMode}"
-                                  showEnrollments="{!v.showFilterByStudy}" ssId="{!v.ssId}"/>
+                <c:MyReferredZone workspaceWrapper="{!v.filteredReferringClinics}"
+                                  userMode="{!v.userMode}"
+                                  showEnrollments="{!v.showFilterByStudy}"
+                                  trialId="{!v.trialId}"
+                                  ssId="{!v.ssId}"
+                                  filterWasChanged="{!v.filterWasChanged}"
+                                  studyPickList="{!v.studyPickList}"
+                                  studySitePickList="{!v.studySitePickList}"
+                                  studyWasChanged = "{!v.studyWasChanged}"/>
             </div>
         </div>
     </aura:if>
