--- a/force-app/main/default/aura/StudyListViewItem/StudyListViewItem.cmp
+++ b/force-app/main/default/aura/StudyListViewItem/StudyListViewItem.cmp
@@ -229,7 +229,7 @@
                     <aura:iteration items="{!v.currentStudy.ssList}" var="siteWrapper" indexVar="siteWrappIndx">
                         <aura:if isTrue="{!siteWrapper.studySite}">
                             <div class="manage-location-details" data-index="{!siteWrappIndx}"
-                                 onclick="{!c.showManageLocationDetails}">{!$Label.c.SS_Manage_Location_Details}</div>
+                                 onclick="{!c.showManageLocationDetails}"><span>{!$Label.c.SS_Manage_Location_Details}</span></div>
 
                             <div class="mrc-invite-popup">
                                 <c:Popup aura:id="manage-location" title="{!$Label.c.SS_Manage_Location_Details}"
@@ -250,9 +250,9 @@
                                                     </button>
                                                 </div>
                                             </div>
-                                            <aura:if isTrue="{!v.contactAccounts}">
+                                            <aura:if isTrue="{!siteWrapper.accounts}">
                                                 <div class="slds-grid slds-wrap">
-                                                    <aura:iteration items="{!v.contactAccounts}" var="accounts"
+                                                    <aura:iteration items="{!siteWrapper.accounts}" var="account"
                                                                     indexVar="accIndex">
                                                         <div class="slds-grid slds-col slds-size--1-of-1">
                                                             <div class="locationContainer slds-grid slds-wrap">
@@ -260,7 +260,7 @@
                                                                      style="height:100%;">
                                                                     <div class="slds-col-size--1-of-1 slds-grid slds-wrap popup-account-name">
                                                                         <div class="slds-col slds-size--1-of-2 slds-grid">
-                                                                            {!accounts.Name + ' ' + $Label.c.SS_Location}
+                                                                            {!account.Name + ' ' + $Label.c.SS_Location}
                                                                         </div>
                                                                         <div class="slds-col slds-size--1-of-2 slds-grid slds-grid_align-end edit-btn"
                                                                              data-indx="{!accIndex}"
@@ -273,24 +273,24 @@
                                                                          style="height:50%;" data-index="{!siteWrappIndx}">
                                                                         <lightning:input aura:id="radioBtn"
                                                                                          class="slds-grid" type="radio"
-                                                                                         value="{!accounts}"
-                                                                                         checked="{!accounts.Id==siteWrapper.studySite.Site__c}"
+                                                                                         value="{!account}"
+                                                                                         checked="{!account.Id==siteWrapper.studySite.Site__c}"
                                                                                          onfocus="{!c.changeRadioMarker}"/>
                                                                     </div>
                                                                     <div class="slds-col slds-size--3-of-12 manage-location-info">
                                                                         <div class="ss-info-headers">{!$Label.c.SS_Address}</div>
-                                                                        <div class="ss-info-address">{!accounts.BillingStreet}</div>
-                                                                        <div class="ss-info-address">{!if(accounts.BillingCity!=null, accounts.BillingCity + ', ', '') +accounts.BillingStateCode + ' ' + accounts.BillingPostalCode}</div>
+                                                                        <div class="ss-info-address">{!account.BillingStreet}</div>
+                                                                        <div class="ss-info-address">{!if(account.BillingCity!=null, account.BillingCity + ', ', '') +account.BillingStateCode + ' ' + account.BillingPostalCode}</div>
                                                                     </div>
                                                                     <div class="slds-col slds-size_4-of-12 manage-location-info">
                                                                         <div class="ss-info-headers">{!$Label.c.SS_Driving_Instructions}</div>
                                                                         <div aura:id="driving-instructions"
-                                                                             class="driving-instructions">{!accounts.Driving_Directions__c}</div>
+                                                                             class="driving-instructions">{!account.Driving_Directions__c}</div>
                                                                     </div>
                                                                     <div class="slds-col slds-size_4-of-12 manage-location-info">
                                                                         <div class="ss-info-headers">{!$Label.c.SS_Parking_Instructions}</div>
                                                                         <div aura:id="driving-instructions"
-                                                                             class="driving-instructions">{!accounts.Parking_Instructions__c}</div>
+                                                                             class="driving-instructions">{!account.Parking_Instructions__c}</div>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -330,7 +330,8 @@
                                                                     options="{!v.countryPicklist}"
                                                                     value="{!v.currentCountry}"
                                                                     class="delegate-select"
-                                                                    onchange="{!c.doCountryChange}"/>
+                                                                    onchange="{!c.doCountryChange}"
+                                                                    useSentenceFont="false"/>
                                                     </div>
                                                 </div>
                                                 <div class="slds-col slds-size--1-of-1 slds-grid slds-wrap">
@@ -351,7 +352,8 @@
                                                                         value="{!v.editedAccount.BillingStateCode}"
                                                                         class="delegate-select"
                                                                         disabled="{!empty(v.states)}"
-                                                                        onchange="{!c.recordWasUpdated}"/>
+                                                                        onchange="{!c.recordWasUpdated}"
+                                                                        useSentenceFont="false"/>
                                                         </div>
                                                         <div class="slds-col slds-size--2-of-6 popup-address-inputs">
                                                             <div class="input-fields-labels">{!$Label.c.SS_Postal_Code}</div>
@@ -442,12 +444,19 @@
                                          class="slds-col slds-size_1-of-1 slds-medium-size_5-of-12 ss-info-container ss-container-border">
                                         <div class="slds-col slds-size_1-of-1 slds-medium-size_7-of-12 ss-info-details"
                                              data-index="{!siteWrappIndx}">
-                                            <div class="input-fields-labels"
-                                                 style="display: inline-block">{!$Label.c.SS_Study_Site_Name}</div>
+                                            <!--<div class="input-fields-labels"
+                                                 style="display: inline-block">{!$Label.c.SS_Study_Site_Name}</div>-->
                                             <div class="rr-form-element">
-                                                <lightning:input aura:id="emailInput"
+                                                <lightning:input aura:id="locationName"
+                                                                 class="ss-lightning-input"
                                                                  value="{!siteWrapper.studySite.Name}"
+                                                                 label="{!$Label.c.SS_Study_Site_Name}"
+                                                                 required="true"
+                                                                 onblur = "{!c.trimChanges}"
                                                                  onchange="{!c.changeUpdatedStatus}"/>
+                                                <!--<lightning:input aura:id="emailInput"
+                                                                 value="{!siteWrapper.studySite.Name}"
+                                                                 onchange="{!c.changeUpdatedStatus}"/>-->
                                             </div>
                                         </div>
                                         <div class="slds-col slds-size_1-of-1 slds-medium-size_4-of-12 ss-info-details clinic-type">
@@ -457,11 +466,12 @@
                                              data-index="{!siteWrappIndx}">
                                             <div class="input-fields-labels">{!$Label.c.SS_Primary_Contact}</div>
                                             <div data-index="{!siteWrappIndx}" onclick="{!c.changeItemIndex}">
-                                                <c:rrSelect id="delegatesPicklist" options="{!v.delegatePicklist}"
+                                                <c:rrSelect id="delegatesPicklist" options="{!v.currentStudy.delegatePicklist}"
                                                             value="{!siteWrapper.studySite.Site_Staff__c}"
                                                             class="delegate-select"
-                                                            placeholder="{!if(v.delegatePicklist.length>0,$Label.c.PG_AC_Select,$Label.c.SS_Add_A_Member)}"
-                                                            onchange="{!c.changeUpdatedStatus}"/>
+                                                            placeholder="{!if(v.currentStudy.delegatePicklist.length>0,$Label.c.PG_AC_Select,$Label.c.SS_Add_A_Member)}"
+                                                            onchange="{!c.changeUpdatedStatus}"
+                                                            useSentenceFont="false"/>
                                             </div>
                                         </div>
                                         <div class="slds-col slds-size_1-of-1 slds-medium-size_4-of-12 ss-info-details"
@@ -488,8 +498,8 @@
                                             <button class="apollo-btn pi-save-btn primary"
                                                     onclick="{!c.saveChanges}"
                                                     value="{!siteWrappIndx}"
-                                                    disabled="{!or(!siteWrapper.studySite.isEmailValid,!siteWrapper.studySite.isRecordUpdated)}"
-                                                    title="{!if(siteWrapper.studySite.isRecordUpdated,if(siteWrapper.studySite.isEmailValid,$Label.c.SS_Save_Changes,$Label.c.SS_invalidEmail),$Label.c.SS_No_Changes_Message)}">
+                                                    disabled="{!!siteWrapper.studySite.isEmailValid || !siteWrapper.studySite.isRecordUpdated || !siteWrapper.studySite.Name}"
+                                                    title="{!siteWrapper.studySite.isRecordUpdated ? siteWrapper.studySite.isEmailValid ? siteWrapper.studySite.Name ? $Label.c.SS_Save_Changes : 'Fill SS Name' : $Label.c.SS_invalidEmail : $Label.c.SS_No_Changes_Message}">
                                                 {!$Label.c.SS_Btn_Save}
                                             </button>
                                         </div>
@@ -528,22 +538,7 @@
                                                                 title="{!action.disableReason}"
                                                                 style="background-color: white; color: #297DFD; box-shadow: none; display: inline-block;"
                                                                 onclick="{!c.doAction}">{!action.label}</button>
-
                                                     </aura:iteration>
-                                                    <!--<button data-site-id="{!siteWrapper.studySite.site.Id}"
-                                                            id="manageReferralsBySS" value="{!siteWrappIndx}"
-                                                            class="apollo-btn primary slds-align-bottom"
-                                                            disabled = "{!siteWrapper.studySite.Override_PI_Referral_Status__c != 'Accepted' &amp;&amp; siteWrapper.studySite.Override_PI_Referral_Status__c != 'Accepted (Admin)'&amp;&amp;
-                                                                              siteWrapper.studySite.Override_PI_Referral_Status__c != 'On Hold'&amp;&amp; siteWrapper.studySite.Override_PI_Referral_Status__c != 'On Hold (Admin)'}"
-                                                            style="background-color: white; color: #297DFD; box-shadow: none; display: inline-block;"
-                                                            onclick="{!c.doAction}">{!$Label.c.SS_Btn_Manage_Referrals}</button>
-                                                    <button data-site-id="{!siteWrapper.studySite.site.Id}"
-                                                            id="manageReferringClinicsBySS" value="{!siteWrappIndx}"
-                                                            class="apollo-btn primary slds-align-bottom"
-                                                            disabled = "{!siteWrapper.studySite.Override_PI_Referral_Status__c != 'Accepted' &amp;&amp; siteWrapper.studySite.Override_PI_Referral_Status__c != 'Accepted (Admin)' &amp;&amp;
-                                                                              siteWrapper.studySite.Override_PI_Referral_Status__c != 'On Hold' &amp;&amp; siteWrapper.studySite.Override_PI_Referral_Status__c != 'On Hold (Admin)'}"
-                                                            style="background-color: white; color: #297DFD; box-shadow: none; display: inline;"
-                                                            onclick="{!c.doAction}">{!$Label.c.SS_Btn_Manage_Referring_Providers}</button>-->
                                                 </div>
                                             </div>
                                         </div>
